--- a/public/documentation.html
+++ b/public/documentation.html
@@ -13,7 +13,27 @@
     <p>The web application will provide users with access to information about different movies, directors, and genres.</p>
 
     <h2>Usage</h2>
-    <p>Users will be able to:</p>
+    <p>Users will be able to:
+
+
+tanya cu valentina
+
+teresa cuiva strain
+
+yana pehl - ?
+
+lea kratchmer - ceva neam cu bischof
+
+ilona - 
+
+manuela - elena hagedorn, daughter of risse charlotte, maybe rahke
+
+lydia needs ministering sisters
+
+
+
+
+    </p>
         <ul>
             <li>sign up</li>
             <li>update their personal information</li>
