--- a/public/documentation.html
+++ b/public/documentation.html
@@ -21,7 +21,7 @@
             <li>create a list of their favorite movies</li>
         </ul>
 
-    <h2>API Documentation</h2>
+    <h2>APIs</h2>
         <table>
     <tr>
         <th>Description</th>
@@ -45,13 +45,13 @@
     </tr>
     <tr>
         <td>Retrieve data about a genre by name</td>
-        <td>/movies/:genres/:genreName</td>
+        <td>/movies/genres/:genreName</td>
         <td>GET</td>
         <td></td>
     </tr>
     <tr>
         <td>Retrieve data about a director by name</td>
-        <td>/movies/:directors/:directorName</td>
+        <td>/movies/directors/:directorName</td>
         <td>GET</td>
         <td></td>
     </tr>
@@ -69,19 +69,19 @@
     </tr>
     <tr>
         <td>Add movie to favorites</td>
-        <td>/movies/:id/:movieTitle</td>
+        <td>/users/:id/:movieTitle</td>
         <td>POST</td>
         <td></td>
     </tr>
     <tr>
         <td>Remove movie from favorites</td>
-        <td>/movies/:favorites</td>
+        <td>/users/:id/:movieTitle</td>
         <td>DELETE</td>
         <td></td>
     </tr>
     <tr>
         <td>Delete user</td>
-        <td>/users</td>
+        <td>/users/:id</td>
         <td>DELETE</td>
         <td></td>
     </tr>
